maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:29: error: not found: value i
  setIndication(x, y, i)
                      ^JediEscaper:32: error: reassignment to val
   y = y - 1
     ^JediEscaper:34: error: reassignment to val
   x = x - 1
     ^JediEscaper:36: error: reassignment to val
   y = y + 1
     ^JediEscaper:38: error: reassignment to val
   x = x + 1
     ^